tab4 hand counted fix

--- a/app/templates/tab4.html
+++ b/app/templates/tab4.html
@@ -62,7 +62,7 @@
             <form id="hand-counted-form">
                 <div class="form-group">
                     <label for="hand-counted-contract-number">Select Contract Number:</label>
-                    <select id="hand-counted-contract-number" class="form-control" onchange="filterHandCountedItems()">
+                    <select id="hand-counted-contract-number" class="form-control" onchange="updateItemDropdown()">
                         <option value="">Select Contract...</option>
                     </select>
                     <input type="text" id="new-contract-number" class="form-control mt-2" placeholder="Enter New Contract" style="display:none;">
