Fix Jinja2 timestamp error in base.html v4, tab3.html v4; implement Tab 3 fixes in tab3.py v77, tab3.js v24; fix categories.py v28, categories.js v5; update rfid_dash_dev.service v5,

--- a/app/templates/tab3.html
+++ b/app/templates/tab3.html
@@ -3,7 +3,7 @@
 {% block title %}Tab 3 - Items in Service{% endblock %}
 {% block scripts %}
     {{ super() }}
-    <script src="{{ url_for('static', filename='js/tab3.js') }}?v={{ timestamp() }}"></script>
+    <script src="{{ url_for('static', filename='js/tab3.js') }}?v={{ '' | timestamp }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -235,9 +235,4 @@
         JavaScript is disabled or failed to load. Please enable JavaScript to use the expand/collapse functionality and other interactive features.
     </div>
 </div>
-
 {% endblock %}
-
-{% macro timestamp() %}
-{{ (now() | int) }}
-{% endmacro %}
