--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}?v={{ timestamp() }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}?v={{ '' | timestamp }}">
     {% block head %}{% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
@@ -47,31 +47,27 @@
         {% block content %}{% endblock %}
     </div>
 
-    <script src="{{ url_for('static', filename='js/jquery.min.js') }}?v={{ timestamp() }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}?v={{ timestamp() }}"></script>
-    <script src="{{ url_for('static', filename='js/htmx.min.js') }}?v={{ timestamp() }}"></script>
-    <script src="{{ url_for('static', filename='js/common.js') }}?v={{ timestamp() }}"></script>
-    <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ timestamp() }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.min.js') }}?v={{ '' | timestamp }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}?v={{ '' | timestamp }}"></script>
+    <script src="{{ url_for('static', filename='js/htmx.min.js') }}?v={{ '' | timestamp }}"></script>
+    <script src="{{ url_for('static', filename='js/common.js') }}?v={{ '' | timestamp }}"></script>
+    <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ '' | timestamp }}"></script>
     {% block scripts %}
         {% if request.path == '/tab/1' %}
-            <script src="{{ url_for('static', filename='js/tab1.js') }}?v={{ timestamp() }}"></script>
+            <script src="{{ url_for('static', filename='js/tab1.js') }}?v={{ '' | timestamp }}"></script>
         {% elif request.path == '/tab/2' %}
-            <script src="{{ url_for('static', filename='js/tab2.js') }}?v={{ timestamp() }}"></script>
+            <script src="{{ url_for('static', filename='js/tab2.js') }}?v={{ '' | timestamp }}"></script>
         {% elif request.path == '/tab/3' %}
-            <script src="{{ url_for('static', filename='js/tab3.js') }}?v={{ timestamp() }}"></script>
+            <script src="{{ url_for('static', filename='js/tab3.js') }}?v={{ '' | timestamp }}"></script>
         {% elif request.path == '/tab/4' %}
-            <script src="{{ url_for('static', filename='js/tab4.js') }}?v={{ timestamp() }}"></script>
+            <script src="{{ url_for('static', filename='js/tab4.js') }}?v={{ '' | timestamp }}"></script>
         {% elif request.path == '/tab/5' %}
-            <script src="{{ url_for('static', filename='js/tab5.js') }}?v={{ timestamp() }}"></script>
+            <script src="{{ url_for('static', filename='js/tab5.js') }}?v={{ '' | timestamp }}"></script>
         {% elif request.path == '/categories' %}
-            <script src="{{ url_for('static', filename='js/categories.js') }}?v={{ timestamp() }}"></script>
+            <script src="{{ url_for('static', filename='js/categories.js') }}?v={{ '' | timestamp }}"></script>
         {% elif request.path == '/' %}
-            <script src="{{ url_for('static', filename='js/home.js') }}?v={{ timestamp() }}"></script>
+            <script src="{{ url_for('static', filename='js/home.js') }}?v={{ '' | timestamp }}"></script>
         {% endif %}
     {% endblock %}
-
-    {% macro timestamp() %}
-        {{ (now() | int) }}
-    {% endmacro %}
 </body>
 </html>
